Prevent any wrapping in the problem search box. Closes #995

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -1296,6 +1296,7 @@ th .filters__dropdown select { font-size: 1em; }
 /** Markup specific to the homepage */
 .homepage .main-options .btn { text-transform: uppercase; }
 
+.problem-search form { white-space: nowrap; }
 .problem-search label { color: #888888; margin: 0.5em 0 1em 0; font-weight: normal; }
 .problem-search .text-input { border: 1px solid white; width: 85%; float: left; margin-bottom: 0; -webkit-border-radius: 0; -moz-border-radius: 0; -ms-border-radius: 0; -o-border-radius: 0; border-radius: 0; -webkit-box-shadow: 0px 0px 0px 0px white; -moz-box-shadow: 0px 0px 0px 0px white; -ms-box-shadow: 0px 0px 0px 0px white; -o-box-shadow: 0px 0px 0px 0px white; box-shadow: 0px 0px 0px 0px white; }
 @media only screen and (min-width: 481px) and (max-width: 1023px) { .problem-search .text-input { width: 70%; } }
